--- a/Desktop App v2/src/GUI/MainGUI.form
+++ b/Desktop App v2/src/GUI/MainGUI.form
@@ -128,6 +128,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Edit or Delete an Officer"/>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jButton4MouseClicked"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="jButton5">
           <Properties>
